5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1716_2506.log
== TEST (2019-05-14 17:42:33) 
-- CODE:
anos=0
quant= float(input("Quantidade inicial de tambaqui:"))
p_cres=float(input("Insira o percentual de crescimento:"))
venda=float(input("Insira a quantidade pra venda:")

while (0<quant<12000):
	acre = quant * p_cresc/ 100
	quant+=acre	
	quant-=venda		
	anos+=1

if(quant<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- ERROR:
File "XXXX", line 6
    while (0<quant<12000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:42:42) 
-- CODE:
anos=0
quant= float(input("Quantidade inicial de tambaqui:"))
p_cres=float(input("Insira o percentual de crescimento:"))
venda=float(input("Insira a quantidade pra venda:"))

while (0<quant<12000):
	acre = quant * p_cresc/ 100
	quant+=acre	
	quant-=venda		
	anos+=1

if(quant<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    acre = quant * p_cresc/ 100
NameError: name 'p_cresc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:06) 
-- CODE:
anos=0
quant= float(input("Quantidade inicial de tambaqui:"))
p_cres=float(input("Insira o percentual de crescimento:"))
venda=float(input("Insira a quantidade pra venda:"))

while (0<quant<12000):
	acre = quant * p_cres/ 100
	quant+=acre	
	quant-=venda		
	anos+=1

if(quant<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:43:15) 
-- CODE:
anos=0
quant= float(input("Quantidade inicial de tambaqui:"))
p_cres=float(input("Insira o percentual de crescimento:"))
venda=float(input("Insira a quantidade pra venda:"))

while (0<quant<12000):
	acre = quant * p_cres/ 100
	quant+=acre	
	quant-=venda		
	anos+=1

if(quant<=0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
-- EXECUTION TIME:
0.168388
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
